--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,7 @@
 <header>
     <div class="container">
         <h1>Arsalan Ahmed</h1>
+        <h2>Software developer</h2>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
